--- a/vigir_ocs_planning_manager/package.xml
+++ b/vigir_ocs_planning_manager/package.xml
@@ -16,7 +16,7 @@
   <build_depend>geometry_msgs</build_depend>
   <!--<build_depend>flor_utilities</build_depend>-->
   <build_depend>flor_planning_msgs</build_depend>
-  <!--<build_depend>flor_ocs_msgs</build_depend>-->
+  <build_depend>flor_ocs_msgs</build_depend>
   <!-- <build_depend>simox_inv_reach_ros</build_depend> -->
 
   <run_depend>roscpp</run_depend>
